force-app/main/default/objects/Country_Join__c/Country_Join__c.object-meta.xml
<CustomObject>
    <label>Country Join</label>
    <nameField>
        <displayFormat>CJ-{00000}</displayFormat>
        <label>Country Join Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Join</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>