force-app/main/default/objects/Country_Join__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Country Join</relationshipLabel>
    <relationshipName>Country_Join</relationshipName>
    <type>Lookup</type>
</CustomField>