force-app/main/default/objects/Country_Join__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Country Join</relationshipLabel>
    <relationshipName>Country_Join</relationshipName>
    <type>Lookup</type>
</CustomField>