force-app/main/default/objects/Country_Join__c/fields/orders__c.field-meta.xml
<CustomField>
    <fullName>orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>orders</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Country Join</relationshipLabel>
    <relationshipName>Country_Join</relationshipName>
    <type>Lookup</type>
</CustomField>